# rfiding-server

./: .buildinfo  .gitignore  LICENSE  README.md  README.rst  build.gradle  build.sbt  genindex.html  http-routingtable.html  index.html  manage.py  objects.inv  package-lock.json  package.json  pyproject.toml  search.html  searchindex.js  shippable.yml  toc-admin.html  toc-changes.html  toc-client.html  toc-user.html  upload_to_github.sh
_sources/: toc-client.rst.txt
_static/: documentation_options.js
access_log/: apps.py  factories.py  models.py  urls.py  views.py
admin/: setup.html
base/: forms.py  models.py  processors.py  views.py
client/: api.html  basics.html
client/api/: v1.html  (+1 more)
conf/: application.conf  logback.xml  messages  messages.de  routes
docs/: conf.py  index.rst  toc-admin.rst  toc-changes.rst  toc-user.rst
firmware/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
machines/: admin.py  ajax.py  api.py  apps.py  factories.py  fields.py  forms.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py  viewsets.py
people/: admin.py  factories.py  forms.py  models.py  urls.py  views.py
project/: plugins.sbt
rfiding/: asgi.py  base_settings.py  settings.dev.py  settings.prod.py  settings.py  urls.py  wsgi.py
rfiding_server/: asgi.py  settings.py  urls.py  wsgi.py
server/: manage.py
space/: api.py  models.py  reporters.py  urls.py  views.py
templates/: about.html  archive_confirm.html  base.html  base_content.html  base_detail.html  base_list.html  base_pagination.html  delete_confirm.html  setup.html
tokens/: admin.py  factories.py  forms.py  models.py  urls.py  views.py
user/: basics.html
users/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
(+338 files in other folders)
