[tool.poetry]
name = "rfiding-server"
version = "1.0"
description = "Rfiding is a project to restrict access to machines and doors in our hackerspace."
authors = ["Phillip Thelen <phillip@thelen.space>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.1"
djangorestframework = "^3.15.2"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.2"
django-autocomplete-light = "^3.11.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"